--- a/Docs + UvA/tensor.ipynb
+++ b/Docs + UvA/tensor.ipynb
@@ -262,6 +262,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tensor shape 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original : tensor([1, 2, 3, 4]) new : tensor([[1, 2],\n",
+      "        [3, 4]])\n",
+      "original : tensor([2, 2, 3, 4]) new : tensor([[2, 2],\n",
+      "        [3, 4]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "original_data = torch.tensor([1,2,3,4])\n",
+    "new_data = original_data.view(2,2)\n",
+    "print(f\"original : {original_data} new : {new_data}\")\n",
+    "\n",
+    "# data를 수정하자\n",
+    "new_data[0][0] = 2\n",
+    "print(f\"original : {original_data} new : {new_data}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_data.permute((1,0)).is_contiguous())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
