--- a/Docs + UvA/tensor.ipynb
+++ b/Docs + UvA/tensor.ipynb
@@ -321,6 +321,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tensor Concat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "vstack vs. hstack vs. dstack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/root/pytorch_practice/Docs + UvA/tensor.ipynb Cell 18\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f74657374227d/root/pytorch_practice/Docs%20%2B%20UvA/tensor.ipynb#X24sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m [torch\u001b[39m.\u001b[39mrand((\u001b[39m2\u001b[39m,)),torch\u001b[39m.\u001b[39mrand((\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m)),torch\u001b[39m.\u001b[39mrand((\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m5\u001b[39m)),]:\n\u001b[1;32m      <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f74657374227d/root/pytorch_practice/Docs%20%2B%20UvA/tensor.ipynb#X24sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mx :\u001b[39m\u001b[39m'\u001b[39m,x\u001b[39m.\u001b[39mshape)\n\u001b[1;32m      <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f74657374227d/root/pytorch_practice/Docs%20%2B%20UvA/tensor.ipynb#X24sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for x in [torch.rand((2,)),torch.rand((2,3)),torch.rand((2,3,5)),]:\n",
+    "    print('x :',x.shape)\n",
+    "    try:\n",
+    "        print(torch.vstack((x,x,x)).shape, torch.cat((x,x,x),dim=0).shape)\n",
+    "        print('stack :',torch.stack((x,x,x),dim=2).shape)\n",
+    "    except:\n",
+    "        print(torch.vstack((x,x,x)).shape)\n",
+    "\n",
+    "    try:\n",
+    "        print(torch.hstack((x,x,x)).shape, torch.cat((x,x,x),dim=1).shape)\n",
+    "    except:\n",
+    "        print(torch.hstack((x,x,x)).shape)\n",
+    "\n",
+    "    try:\n",
+    "        print(torch.dstack((x,x,x)).shape, torch.cat((x,x,x),dim=2).shape)\n",
+    "    except:\n",
+    "        print(torch.dstack((x,x,x)).shape)\n",
+    "    \n",
+    "    print()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
